[package]
name = "enigma-colab"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
git2 = "0.19.0"
rocket = { version = "0.5.0", features = ["secrets", "uuid"] }
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dev-dependencies]
tempfile = "3.9.0"
